Fix speisen block spacing caused by aem.js wrapTextNodes
The new aem.js decorateBlock() wraps bare text nodes in <p> tags via
wrapTextNodes(). Combined with global p { margin: 1em 0 } this created
unwanted spacing in the speisen grid layout. Reset p margins to 0 inside
the speisen block.

--- a/blocks/speisen/speisen.css
+++ b/blocks/speisen/speisen.css
@@ -25,3 +25,8 @@ div.speisen > div > div:nth-child(3) {
     font-style: italic;
     text-align: left;
 }
+
+/* reset p margins added by aem.js wrapTextNodes */
+div.speisen p {
+    margin: 0;
+}
